# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: PyCI.yml
page_analyzer/: app.py  db.py  formatting.py  parser.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
